--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
       color: #fff;
       font-size: 13px;
       font-weight: 500;
+      text-align: center;
       opacity: 0;
       transition: opacity 0.2s ease;
       pointer-events: none;
@@ -453,7 +454,7 @@
         </li>
         <li class="project-tile" data-project>
           <span class="project-tile-thumb-wrap">
-            <img class="project-tile-thumb" src="/assets/heissel.png" alt="Spectral functions">
+            <img class="project-tile-thumb" src="/assets/dudal.png" alt="Spectral functions">
             <span class="project-tile-title">Neural networks for confined particles</span>
           </span>
           <div class="project-tile-body">
@@ -464,7 +465,7 @@
         </li>
         <li class="project-tile" data-project>
           <span class="project-tile-thumb-wrap">
-            <img class="project-tile-thumb" src="/assets/dudal.png" alt="Dark Matter reconstruction">
+            <img class="project-tile-thumb" src="/assets/heissel.png" alt="Dark Matter reconstruction">
             <span class="project-tile-title">Dark matter in the Galactic Center</span>
           </span>
           <div class="project-tile-body">
