--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
       <h1>AI for Astrophysics</h1>
 
       <p> I am a PhD student at the <a href="https://www.mpa-garching.mpg.de/" title="Max Planck Institute for Astrophysics">Max Planck Institute for Astrophysics</a> working on "Advancing stellar and binary evolution using machine learning" with Prof. <a href="https://www.selmademink.com/" title="Selma de Mink">Selma de Mink</a>.
-        I was previously a Research Assistant in the <a href="https://science.gsfc.nasa.gov/astrophysics/astroparticles/" title="Astroparticle Physics Lab">Astroparticle Physics Lab</a> and
+        I was previously a Research Assistant in
         the <a href="https://science.gsfc.nasa.gov/astrophysics/gravity/" title="Gravitational Astrophysics Lab">Gravitational Astrophysics Lab</a>
         at <a href="https://www.nasa.gov/goddard/" title="NASA Goddard">NASA Goddard Space Flight Center</a>.
         I have an MSc. in Computer Science from <a href="https://www.kuleuven.be/english/kuleuven/index.html" title="KU Leuven">KU Leuven</a> and research experience in applying AI to astrophysics in numerous projects at NASA and ESA.</p>
