--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 
     section p, section li {
       font-size: 16px;  /* Increased from 14px */
+      text-align: justify;
     }
 
     /* Adjust link size in header */
@@ -317,6 +318,7 @@
       box-shadow: 0 12px 40px rgba(0, 0, 0, 0.2);
       font-size: 15px;
       line-height: 1.5;
+      text-align: justify;
     }
     [data-theme="dark"] .project-popup {
       border-color: rgba(255, 255, 255, 0.2);
